modif backend vers gitlab

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: animapaise
+  name: gitlab
+  repo: jpoupinet/animapaise
 media_folder: static/assets
 public_folder: /assets
 collections:
