cms backend git-gateway

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: gitlab
-  repo: jpoupinet/animapaise
+  name: git-gateway
 media_folder: static/assets
 public_folder: /assets
 collections:
