--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "netlify-cms-app": "^2.14.46",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
