--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   "dependencies": {
     "bulma": "^0.9.2",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
     "gatsby-plugin-sass": "^4.3.0",
-    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-remark-copy-linked-files": "^4.1.0",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-remark-relative-images": "Daguima-dag/gatsby-remark-relative-images#win-path-fix",
+    "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "netlify-cms-app": "^2.14.46",
-    "node-sass": "^5.0.0",
+    "node-sass": "4.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
