--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bulma": "^0.9.2",
     "gatsby": "^3.2.1",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
     "gatsby-plugin-sass": "^4.3.0",
@@ -26,6 +27,7 @@
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "gbimage-bridge": "^0.1.4",
     "netlify-cms-app": "^2.14.46",
     "node-sass": "4.12.0",
     "react": "^17.0.1",
