--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
 
 media_folder: static/img
-public_folder: /public/img
+public_folder: /img
 
 collections:
   - name: "pages"
