--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -71,13 +71,16 @@ collections:
           - {label: "Diplômes / Certificats", name: "diplomesCertificats", widget: list, fields: [
               {label: "Année", name: "annee", widget: string},
               {label: "Description", name: "description", widget: text},
+              {label: "Organisme", name: "organisme", widget: text},
             ]}
           - {label: "Formations / Stages", name: "formationsStages", widget: list, fields: [
               {label: "Année", name: "annee", widget: string},
               {label: "Description", name: "description", widget: text},
+              {label: "Organisme", name: "organisme", widget: text},
             ]}
           - {label: "Expériences", name: "experiences", widget: list, fields: [
               {label: "Année", name: "annee", widget: string},
               {label: "Description", name: "description", widget: text},
+              {label: "Organisme", name: "organisme", widget: text},
             ]}
 
