base page activites

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -65,6 +65,11 @@ collections:
         label: "Comportement canin"
         name: "comportement"
         fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "activites-page"}
+      - file: "src/pages/activites.md"
+        label: "Activités et sports canins"
+        name: "activites"
+        fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "comportement-page"}
       - file: "src/pages/a-propos.md"
         label: "A propos"
