--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "bulma": "^0.9.2",
-    "gatsby": "^3.2.1",
+    "gatsby": "^3.6.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
@@ -30,9 +30,9 @@
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "gbimage-bridge": "^0.1.4",
-    "netlify-cms-app": "^2.14.46",
-    "node-sass": "4.12.0",
-    "react": "^17.0.1",
+    "netlify-cms-app": "^2.15.11",
+    "node-sass": "^6.0.0",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
