--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "bulma": "^0.9.2",
-    "gatsby": "^3.6.0",
+    "gatsby": "^3.6.1",
     "gatsby-background-image": "^1.5.3",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-netlify-cms": "^5.3.0",
-    "gatsby-plugin-sass": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.4.0",
-    "gatsby-remark-copy-linked-files": "^4.1.0",
-    "gatsby-remark-images": "^5.1.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-netlify-cms": "^5.6.0",
+    "gatsby-plugin-sass": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-copy-linked-files": "^4.3.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-relative-images": "Daguima-dag/gatsby-remark-relative-images#win-path-fix",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.4.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
+    "gatsby-transformer-sharp": "^3.6.0",
     "gbimage-bridge": "^0.1.4",
     "netlify-cms-app": "^2.15.11",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "^2.3.0"
   },
   "repository": {
     "type": "git",
