--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -75,6 +75,15 @@ collections:
               {label: Lien, name: lien, widget: string},
             ]
           }
+          - {
+            label: Citation,
+            name: citation,
+            widget: object,
+            fields: [
+              {label: Texte, name: texte, widget: text},
+              {label: "Auteur / Autrice", name: auteur, widget: string}
+            ]
+          }
       - file: "src/pages/comportement.md"
         label: "Comportement canin"
         name: "comportement"
