--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -162,6 +162,7 @@ collections:
             widget: list,
             fields: [
               {label: Titre, name: titre, widget: string},
+              {label: Sous titre, name: sousTitre, widget: string},
               {
                 label: "Tarifs",
                 name: "tarifs",
@@ -214,6 +215,7 @@ collections:
             widget: list,
             fields: [
               {label: Titre, name: titre, widget: string},
+              {label: Sous titre, name: sousTitre, widget: string},
               {
                 label: "Tarifs",
                 name: "tarifs",
@@ -266,6 +268,7 @@ collections:
             widget: list,
             fields: [
               {label: Titre, name: titre, widget: string},
+              {label: Sous titre, name: sousTitre, widget: string},
               {
                 label: "Tarifs",
                 name: "tarifs",
@@ -318,6 +321,7 @@ collections:
             widget: list,
             fields: [
               {label: Titre, name: titre, widget: string},
+              {label: Sous titre, name: sousTitre, widget: string},
               {
                 label: "Tarifs",
                 name: "tarifs",
