ajout widget video pour champs markdown

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "gatsby-remark-copy-linked-files": "^4.3.0",
     "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-relative-images": "Daguima-dag/gatsby-remark-relative-images#win-path-fix",
+    "gatsby-remark-video-shortcode": "^1.0.1",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-remark": "^4.3.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "gbimage-bridge": "^0.1.4",
     "netlify-cms-app": "^2.15.20",
+    "netlify-cms-editor-component-video": "^1.0.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
