--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-netlify-cms": "^5.8.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-remark-copy-linked-files": "^4.3.0",
     "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-relative-images": "Daguima-dag/gatsby-remark-relative-images#win-path-fix",
