--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -130,6 +130,7 @@ collections:
             label: "Pré-requis",
             name: "prerequis",
             widget: list,
+            required: false,
             fields: [
               {label: Texte, name: texte, widget: string},
             ]
@@ -202,6 +203,7 @@ collections:
             label: "Pré-requis",
             name: "prerequis",
             widget: list,
+            required: false,
             fields: [
               {label: Texte, name: texte, widget: string},
             ]
@@ -255,6 +257,7 @@ collections:
             label: "Pré-requis",
             name: "prerequis",
             widget: list,
+            required: false,
             fields: [
               {label: Texte, name: texte, widget: string},
             ]
@@ -308,6 +311,7 @@ collections:
             label: "Pré-requis",
             name: "prerequis",
             widget: list,
+            required: false,
             fields: [
               {label: Texte, name: texte, widget: string},
             ]
@@ -361,6 +365,61 @@ collections:
             label: "Pré-requis",
             name: "prerequis",
             widget: list,
+            required: false,
+            fields: [
+              {label: Texte, name: texte, widget: string},
+            ]
+          }
+          - {
+            label: "Tarifs",
+            name: "tarifs",
+            widget: list,
+            fields: [
+              {label: Titre, name: titre, widget: string},
+              {label: Sous titre, name: sousTitre, widget: string},
+              {
+                label: "Tarifs",
+                name: "tarifs",
+                widget: list,
+                fields: [
+                  {label: Texte, name: texte, widget: string},
+                ]
+              }
+            ]
+          }
+          - {label: "Sous texte tarifs", name: "sousTexteTarifs", widget: string}
+          - {
+            label: "Images bas de page",
+            name: "imagesBasDePage",
+            widget: list,
+            fields: [
+              {label: Image, name: image, widget: image},
+              {label: "Survol image", name: "survolImage", widget: string},
+            ]
+          }
+          - {
+            label: "Liens crédits photo",
+            name: "liensCreditPhoto",
+            widget: list,
+            fields: [
+              {label: "Texte", name: "texte", widget: string},
+              {label: "Lien", name: "lien", widget: string},
+            ]
+          }
+      - file: "src/pages/activites/hooper.md"
+        label: "Hooper"
+        name: "hooper"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "hooper-page"}
+          - {label: "Image", name: "imageIntro", widget: image}
+          - {label: "Survol image", name: "survolImageIntro", widget: string}
+          - {label: "Titre page", name: "titrePage", widget: string}
+          - {label: "Body", name: "body", widget: "markdown"}
+          - {
+            label: "Pré-requis",
+            name: "prerequis",
+            widget: list,
+            required: false,
             fields: [
               {label: Texte, name: texte, widget: string},
             ]
