--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.7"
   },
   "devDependencies": {
     "prettier": "^2.3.0"
